--- a/render.yaml
+++ b/render.yaml
@@ -9,4 +9,4 @@ services:
       - key: N8N_BASIC_AUTH_USER
         value: 5054creator
       - key: N8N_BASIC_AUTH_PASSWORD
-        value: y1111
+        value: MySecurePassword123!
