--- a/render.yaml
+++ b/render.yaml
@@ -9,4 +9,4 @@ services:
       - key: N8N_BASIC_AUTH_USER
         value: 5054creator
       - key: N8N_BASIC_AUTH_PASSWORD
-        value: n8n5054creator!*
+        value: n8n5054creator!Sosa
